--- a/projects/04-react-prueba-tecnica/index.html
+++ b/projects/04-react-prueba-tecnica/index.html
@@ -10,6 +10,6 @@
     <div id="app">
       <!-- Renderizar mi app de react -->
     </div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/main.jsx"></script>
   </body>
 </html>
